--- a/style.css
+++ b/style.css
@@ -81,9 +81,10 @@ h1{
     border-radius: 10px;
     font-size: 1.2em;
     padding:10px 10px;
-    width: 200px;
+    width: 45vw;
     border: none;
     margin: 15px 80px ;
+    width: 17vw;
 
     
 }
@@ -215,15 +216,22 @@ overflow: hidden;
 }
 
 .BotonMenu{
-flex-direction: row;
+display: flex;
+flex-direction: column;
+padding-top: 15vh;
 width: 30vw;
+height: 100%;
 align-items: center;
+justify-items: center;
+
+
 
 }
 .nombreCongre{
-    font-size: 12px;
+    font-size: 1 em;
     font-weight: bolder;
     text-align: center;
+    color: #413f3f;
 }
 .week{
     background-color: chocolate;
@@ -232,7 +240,7 @@ align-items: center;
     border-color: black;
 }
 .rowHeader{
-    background-color: slategray;
+    
     display: flex;
     flex-direction: row;
 
@@ -249,7 +257,6 @@ align-items: center;
 }
 
 .row1{
-    background-color: chartreuse;
     flex-direction: column;
     font-size: 11px;
     width: 100%;
@@ -270,17 +277,46 @@ align-items: center;
 .celdaA1,
 .celdaA2,
 .celdaA3 {
+    
     flex-grow: 1;
 }
 
-.celdaA1 {
-    background-color: #4A00E0;
-}
+
 
 .celdaA2 {
-    background-color: #55398b91;
+    margin: 0;
+   
 }
 
-.celdaA3 {
-    background-color: #e000d5;
+
+
+
+.btnVym{
+
+    width: 10vw;
+}
+
+input{
+    width: 100%;
+    font-size: 0.8em;
+}
+
+.num{
+    width: 10%;
+}
+
+.hermanos{
+    width: 30%;
+}
+
+.Presidente{
+  width: 57%;
+}
+
+.TESOROS{
+    height: 1.7vh;
+    width: 1.7vh;
+    border-radius: 5px;
+    object-fit: fill;
+    overflow: hidden;
 }
