--- a/style.css
+++ b/style.css
@@ -207,7 +207,7 @@ img{
     background-color:rgba(0, 0, 0, 0.2);
     background-size: cover;
     min-height: 100vh; 
-    margin-top: 8vh;   
+    margin-top: 4vh;   
     padding-top: 1vh;
    
 }
@@ -215,23 +215,22 @@ img{
 
 .estructura1{
 border-style: solid;
-height: 90vh;
-width: 40vw;
+height: calc((100vh / 0.21)*0.2); 
+width: calc((100vw / 0.297)*0.2); 
 background-color: #fff;
 overflow: hidden;
-font-size: 12px;
+font-size:0.875em;
+padding: 10px;
 }
 
 .BotonMenu{
 display: flex;
 flex-direction: column;
 padding-top: 15vh;
-width: 30vw;
+width: 20vw;
 height: 100%;
-align-items: center;
+align-items: flex-start;
 justify-items: center;
-
-
 
 }
 .nombreCongre{
@@ -241,7 +240,7 @@ justify-items: center;
     color: #413f3f;
 }
 .week{
-    background-color: chocolate;
+    
     height: 25vh;
     width: 100%;
     border-color: black;
@@ -250,8 +249,13 @@ justify-items: center;
     
     display: flex;
     flex-direction: row;
+    background-color: rgb(242, 242, 242);
 
 
+}
+
+.background-Color242{
+    background-color: rgb(242, 242, 242);
 }
 
 .icon{
@@ -282,6 +286,7 @@ justify-items: center;
     display: flex;
     flex-direction: row;
     width: 100%;
+    justify-content: space-around;
    
 }
 
@@ -290,14 +295,10 @@ justify-items: center;
 .celdaA3 {
     
     flex-grow: 1;
+    font-size: 1.2em;
+    padding-left: 10px;
 }
 
-
-
-.celdaA2 {
-    margin: 0;
-   
-}
 
 
 
@@ -309,7 +310,10 @@ justify-items: center;
 
 input{
     width: 100%;
-    font-size: 0.8em;
+    font-size: 0.9em;
+    padding: 0;
+    margin: 0;
+    border: none;
 }
 
 .num{
@@ -338,7 +342,18 @@ input{
     text-align: left;
 }
 .colorgreen{
-    color: darkolivegreen;
+    color: rgb(35, 141, 156);
+    background-color: white;
+    
+}
+.colorred{
+    color: rgba(153, 19, 30);
+    background-color: white;
+    
+}
+
+.coloryellow{
+    color: rgb(217, 142, 4);
     background-color: white;
     
 }
@@ -346,16 +361,55 @@ input{
     color: #6a6a6a;
 }
 .hermanoAsig{
-    color: #6a6a6a;
+    color: #111111;
     font-weight: bold;
     text-align: right;
+    
+    width: 50%;
+    justify-content: end;
 }
-
+.seccion1{
+ width: 70%;
+}
 .widthauto{
     width: auto; /* Ancho automático */
+}
+.first-div {
+    
+    overflow: hidden;
+    min-width: 100px;
+   
+  }
+  
+  .second-div {
+   
+    margin-left: 10px; /* Espacio entre los dos divs */
+  }
+.flex1{
+  
+    flex-grow: 1;
+}
+
+.fontS{
+    font-size: 0.8em ;
 
 }
 
-.flex1{
-    flex-grow: 1;
+.width100{
+    width: 99px;
+}
+
+.font2{
+    font-size: 1.2em;
+    padding-left: 10px;
+}
+hr {
+    border: none;
+    height: 2px;
+    background-color: #ccc;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Sombras */
+  }
+
+.right{
+    justify-content: end;
 }
